fix: details title wrap

--- a/src/styles/components/vacansy-details/vd-content.css
+++ b/src/styles/components/vacansy-details/vd-content.css
@@ -6,6 +6,7 @@
 
   .title {
     margin-block-end: 1.25rem;
+    text-wrap: balance;
   }
 
   section header {
